--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,8 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(to bottom, #311847, #3EB9E6);
+    background: linear-gradient(to bottom, #311847, #3EB9E6) no-repeat center center fixed;
+    background-size: cover;
     font-family: 'Abel', sans-serif;
     color: white;
     animation-name: introduction;
@@ -101,6 +102,7 @@ input:focus {
 .weather {
     font-size: 2rem;
     text-align: center;
+    margin-bottom: 1.5rem;
 }
 
 .weather h2 {
